syntax = "proto3";

package io.mystore.shipping.entity;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "OrderSkuItemEntity";

message OrderSkuItemState {
  string customer_id = 1;
  string order_id = 2;
  string order_sku_item_id = 3;
  string sku_id = 4;
  string sku_name = 5;
  string stock_sku_item_id = 6;
  google.protobuf.Timestamp ordered_utc = 7;
  google.protobuf.Timestamp shipped_utc = 8;
  google.protobuf.Timestamp back_ordered_utc = 9;
}

message CreatedOrderSkuItem {
  string customer_id = 1;
  string order_id = 2;
  string order_sku_item_id = 3;
  string sku_id = 4;
  string sku_name = 5;
  google.protobuf.Timestamp ordered_utc = 6;
}

message JoinedToStockSkuItem {
  string order_id = 1;
  string order_sku_item_id = 2;
  string sku_id = 3;
  string stock_sku_item_id = 4;
  google.protobuf.Timestamp shipped_utc = 5;
}

message ReleasedFromOrderSkuItem {
  string order_id = 1;
  string order_sku_item_id = 2;
  string sku_id = 3;
  string stock_sku_item_id = 4;
}

message BackOrderedOrderSkuItem {
  string order_id = 1;
  string order_sku_item_id = 2;
  string sku_id = 3;
  google.protobuf.Timestamp back_ordered_utc = 4;
}

message StockSkuItemRequired {
  string order_id = 1;
  string order_sku_item_id = 2;
  string sku_id = 3;
}
