syntax = "proto3";

package io.mystore.shipping2.view;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "OrderSkuItemModel";

message OrderSkuItem {
  string order_id = 1;
  string order_sku_item_id = 2;
  string sku_id = 3;
  string sku_name = 4;
  google.protobuf.Timestamp back_ordered_utc = 5;
}
